2006-08-16  Mike Stump  <mrs@apple.com>

	* doc/invoke.texi (-Wno-deprecated-declarations): Fixup use of pxref.
	* doc/cppopts.texi (-MD): Likewise.

2006-08-15  Danny Smith  <dannysmith@users.sourceforge.net>

	PR c/28287
	* c-common.c (handle_weak_attribute): Ignore and warn if
	not a FUNCTION_ or VAR_DECL.

2006-07-15  Mike Stump  <mrs@apple.com>

	PR c/28280
	* c-parser.c (c_parser_typeof_specifier): Don't use
	c_finish_expr_stmt, open code desired semantics instead.

2006-08-15  Nick Clifton  <nickc@redhat.com>

	* config.gcc (x86-mingw32): Add a gthr-win32.h including makefile
	fragment to tmake_file only if threads are enabled.
	* config/i386/t-mingw32 (LIB2FUNCS_EXTRA): Move to...
	* config/i386/t-gthr-win32: New file. ... here.

2006-08-15  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR c/28649
	* c-parser.c (c_parser_compound_statement_nostart): Reset
	parser->error after each statement.

2006-08-15  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/28713
	* omp-low.c (lower_omp_parallel): Convert t to
	receiver_decl's type.
	(expand_omp_parallel): STRIP_NOPS from the MODIFY_EXPR
	source before comparison.

	PR middle-end/28724
	* gimplify.c (gimplify_omp_atomic_pipeline): Convert oldival
	to itype in assignment to oldival2.

2006-07-14  Andrew Pinski  <pinksia@physics.uc.edu>

	PR c/27490
	PR c/27489
	* c-typeck.c (build_compound_expr): If the second expression
	is an error mark, then just return an error mark instead of
	creating a COMPOUND_EXPR.

2006-07-14  Mike Stump  <mrs@apple.com>

	* Makefile.in (LIBGCC_DEPS): Don't depend on LANGUAGES.

2006-08-14  Kazu Hirata  <kazu@codesourcery.com>

	* c-decl.c, var-tracking.c: Fix comment typos.

2006-08-14  Richard Sandiford  <richard@codesourcery.com>

	PR rtl-optimization/28634
	* reorg.c (fill_slots_from_thread): Do not assume A + X - X == A
	for floating-point modes unless flag_unsafe_math_optimizations.

2006-08-13  Alexandre Oliva  <aoliva@redhat.com>
	    Andrew Pinski  <pinskia@physics.uc.edu>